# proxmox_automation

./: .dockerignore  .env.example  .gitignore  .windsurfrules  ARCHITECTURE.md  ARCHITECTURE_DAG_PROPOSAL.md  Dockerfile  Dockerfile.production  MIGRATION_FLOW.md  README.md  SETUP.md  config.example.yaml  config.yaml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  manage.py  migrate.py  pve-migrate.sh  pyproject.toml  register_proxmox_host.py  requirements-prod.txt  requirements.txt  start.bat  start.sh  test_proxmox_connection.py
.windsurf/rules/: rules.md
scripts/: .windsurfrules  healthcheck.sh  verify_local_migration_fixes.py
static/: dashboard.css
templates/dashboard/: base.html  browse.html  compatibility_history.html  config_editor.html  hosts.html  index.html  job_confirm_delete.html  job_detail.html  job_list.html  wizard.html
vmware_to_proxmox/: .windsurfrules  __init__.py  cli.py  config.py  disk.py  engine.py  guest.py  logger.py  models.py  proxmox.py  vmware.py
vmware_to_proxmox/audit/: __init__.py  auditor.py
vmware_to_proxmox/preflight/: checklist.py  snapshot_checker.py
vmware_to_proxmox/remediation/: driver_purge.py  network_rename.py
vmware_to_proxmox/schemas/: hardware_spec.py  postgresql_schema.sql
vmware_to_proxmox/tasks/: checkpoint.py  dag.py  rollback.py
webui/: .windsurfrules  asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
webui/dashboard/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py  views_health.py
webui/dashboard/migrations/: 0001_initial.py  (+10 more)
(+3 files in other folders)
